force-app/main/default/objects/TAD_Deal__c/TAD_Deal__c.object-meta.xml
<CustomObject>
    <label>Deals old</label>
    <nameField>
        <label>Deal ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>