force-app/main/default/objects/TAD_Deal__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <label>Deal #</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>