force-app/main/default/objects/TAD_Deal__c/fields/Deal_Owner__c.field-meta.xml
<CustomField>
    <fullName>Deal_Owner__c</fullName>
    <label>Deal Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>a_Deal_Owner</valueSetName>
    </valueSet>
</CustomField>