force-app/main/default/objects/TAD_Deal__c/fields/Flights__c.field-meta.xml
<CustomField>
    <fullName>Flights__c</fullName>
    <label>Flights</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UJF</fullName>
            </value>
            <value>
                <fullName>PAF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>