force-app/main/default/objects/TAD_Deal__c/fields/Land_Partner_2_del__c.field-meta.xml
<CustomField>
    <fullName>Land_Partner_2_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Land Partner 2</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Deals1_del</relationshipName>
    <type>Lookup</type>
</CustomField>