force-app/main/default/objects/TAD_Deal__c/fields/Last_Imported__c.field-meta.xml
<CustomField>
    <fullName>Last_Imported__c</fullName>
    <label>Last Imported</label>
    <type>Date</type>
</CustomField>