force-app/main/default/objects/TAD_Deal__c/fields/Minimum_PAX_Tour_Group__c.field-meta.xml
<CustomField>
    <fullName>Minimum_PAX_Tour_Group__c</fullName>
    <label>Minimum PAX Tour Group</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>