force-app/main/default/objects/TAD_Deal__c/fields/Reservation_Status__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Status__c</fullName>
    <label>Reservation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>a_Res_Status</valueSetName>
    </valueSet>
</CustomField>