force-app/main/default/objects/TAD_Deal__c/fields/Site_Status__c.field-meta.xml
<CustomField>
    <fullName>Site_Status__c</fullName>
    <label>Site Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>a_Site_Status</valueSetName>
    </valueSet>
</CustomField>