force-app/main/default/objects/TAD_Deal__c/fields/Travel_Pack__c.field-meta.xml
<CustomField>
    <fullName>Travel_Pack__c</fullName>
    <label>Travel Pack</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>a_Travel_Pack</valueSetName>
    </valueSet>
</CustomField>