force-app/main/default/objects/TAD_Deal__c/fields/Vouchers_Sold_From_Deal_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Vouchers_Sold_From_Deal_Sheet__c</fullName>
    <label>Vouchers Sold(From Deal Sheet)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>