force-app/main/default/objects/TAD_Deal__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Deal_Name__c</columns>
    <columns>Reservation_Status__c</columns>
    <columns>Site_Status__c</columns>
    <columns>Vouchers_Sold_From_Deal_Sheet__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>